git-svn-id: https://subversion.cbd.int/svn/repo/Bch/Help@1745 ca237ed5-24d0-bc44-ad4d-3f151b82840b

--- a/CurrentRelease/es/AJAX_BCH_Development_Tool.html
+++ b/CurrentRelease/es/AJAX_BCH_Development_Tool.html
@@ -70,14 +70,11 @@
     </div>
     <div id="pagebody">
         <div id="mainbody">
-<DIV>
-<P class=MsoNormal><SPAN lang=EN-CA>El plug-in del CIISB AJAX es una aplicación JavaScript basada en la tecnología Ajax que puede ser fácilmente integrada en cualquier sitio web que permite desplegar información del Portal Central del CIISB.</SPAN></P>
-<P class=MsoNormal></P>
-<P class=MsoNormal><SPAN lang=EN-CA>La utilización del Plug-in del CIISB AJAX no requiere conocimientos específicos de TI. El Plug-in funciona en todas las plataformas y no requiere de instalación ninguna. Todos los archivos necesarios se encuentran en el Portal Central del CIISB y son actualizados por el Secretariado.</SPAN></P>
-<P class=MsoNormal></P>
-<DIV><SPAN lang=EN-CA style="FONT-SIZE: 10pt; FONT-FAMILY: Arial">El</SPAN> <SPAN lang=EN-CA>Plug-in del CIISB AJAX es una aplicación que funciona del lado del cliente. La conexión al Portal Central del CIISB es realizada directamente por el cliente (Usuario Final).</SPAN> </DIV>
-<DIV><SPAN lang=EN-CA><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=357&amp;username=guest&amp;password=guest" target=_blank>Guia de Usuario de Ajax.</A></SPAN> </DIV>
-<DIV><SPAN lang=EN-CA><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=358&amp;username=guest&amp;password=guest" target=_blank>Ejercicio PlugIn Ajax.</A></SPAN> </DIV></DIV>
+<P><SPAN lang=EN-CA><B>El plug-in del CIISB AJAX es una aplicación JavaScript basada en la tecnología Ajax que puede ser fácilmente integrada en cualquier sitio web que permite desplegar información del Portal Central del CIISB.</B></SPAN></P>
+<P class=MsoNormal><SPAN lang=EN-CA><B>La utilización del Plug-in del CIISB AJAX no requiere conocimientos específicos de TI. El Plug-in funciona en todas las plataformas y no requiere de instalación ninguna. Todos los archivos necesarios se encuentran en el Portal Central del CIISB y son actualizados por el Secretariado.</B></SPAN></P>
+<P class=MsoNormal><SPAN lang=EN-CA style="FONT-SIZE: 10pt; FONT-FAMILY: Arial"><B>El</B></SPAN> <SPAN lang=EN-CA><B>Plug-in del CIISB AJAX es una aplicación que funciona del lado del cliente. La conexión al Portal Central del CIISB es realizada directamente por el cliente (Usuario Final).</B></SPAN></P>
+<P class=MsoNormal><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/Es/13) Ajax BCH Development tool/AX01Es.pdf" target=_blank>Guia de Usuario de Ajax.</A></P>
+<P class=MsoNormal><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/Es/13) Ajax BCH Development tool/AX02Es.pdf" target=_blank>Ejercicio PlugIn Ajax.</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
