--- a/CurrentRelease/es/Ready_Reference_Guide.html
+++ b/CurrentRelease/es/Ready_Reference_Guide.html
@@ -70,20 +70,20 @@
     </div>
     <div id="pagebody">
         <div id="mainbody">
-<P>Existen varias guías de referencia disponibles para proveer una visión general de las secciones más utilizadas del CIISB y que pueden utilizarse despues de que se haya completado el entrenamiento.<BR><BR><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=484&amp;username=guest&amp;password=guest" target=_blank>Introdución rápida al CIISB</A></P>
-<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=485&amp;username=guest&amp;password=guest" target=_blank>Siglas</A></P>
-<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=486&amp;username=guest&amp;password=guest" target=_blank>Tipos de registros en CIISB</A></P>
-<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=487&amp;username=guest&amp;password=guest" target=_blank>Iconos</A></P>
-<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=488&amp;username=guest&amp;password=guest" target=_blank>Glosario corto</A></P>
-<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=489&amp;username=guest&amp;password=guest" target=_blank>Centro de Gestión</A></P>
-<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=490&amp;username=guest&amp;password=guest" target=_blank>Decisiones y declaraciones</A></P>
-<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=491&amp;username=guest&amp;password=guest" target=_blank>Rasgos introducidos</A></P>
-<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=492&amp;username=guest&amp;password=guest" target=_blank>Contactos</A></P>
-<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=493&amp;username=guest&amp;password=guest" target=_blank>Recursos de información</A></P>
-<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=494&amp;username=guest&amp;password=guest" target=_blank>Identificación única</A></P>
-<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=495&amp;username=guest&amp;password=guest" target=_blank>Listado de información publicada en el CIISB</A></P>
-<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=496&amp;username=guest&amp;password=guest" target=_blank>Plazos para publicar información en el CIISB</A></P>
-<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=497&amp;username=guest&amp;password=guest" target=_blank>Lista de verificacion para Partes nuevas</A></P>
+<P><STRONG>Existen varias guías de referencia disponibles para proveer una visión general de las secciones más utilizadas del CIISB y que pueden utilizarse despues de que se haya completado el entrenamiento.</STRONG><BR><BR><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Es/06) Ready Reference Guides/RR01Es.pdf" target=_blank>Introdución rápida al CIISB</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Es/06) Ready Reference Guides/RR02Es.pdf" target=_blank>Siglas</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Es/06) Ready Reference Guides/RR03Es.pdf" target=_blank>Tipos de registros en CIISB</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Es/06) Ready Reference Guides/RR04Es.pdf" target=_blank>Iconos</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Es/06) Ready Reference Guides/RR05Es.pdf" target=_blank>Glosario corto</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Es/06) Ready Reference Guides/RR06Es.pdf" target=_blank>Centro de Gestión</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Es/06) Ready Reference Guides/RR07Es.pdf" target=_blank>Decisiones y declaraciones</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Es/06) Ready Reference Guides/RR08Es.pdf" target=_blank>Rasgos introducidos</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Es/06) Ready Reference Guides/RR09Es.pdf" target=_blank>Contactos</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Es/06) Ready Reference Guides/RR10Es.pdf" target=_blank>Recursos de información</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Es/06) Ready Reference Guides/RR11Es.pdf" target=_blank>Identificación única</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Es/06) Ready Reference Guides/RR12Es.pdf" target=_blank>Listado de información publicada en el CIISB</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Es/06) Ready Reference Guides/RR13Es.pdf" target=_blank>Plazos para publicar información en el CIISB</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Es/06) Ready Reference Guides/RR14Es.pdf" target=_blank>Lista de verificacion para Partes nuevas</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
