--- a/CurrentRelease/es/Stakeholder curricula.html
+++ b/CurrentRelease/es/Stakeholder curricula.html
@@ -70,16 +70,15 @@
     </div>
     <div id="pagebody">
         <div id="mainbody">
-<DIV class=summary>
-<P>Resume todos los recursos de entrenamientos disponibles y describe la&nbsp; currícula modelo para cada uno de los grupos de beneficiarios.</P>
-<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=158&amp;username=guest&amp;password=guest" target=_blank>Ingreso de informacion Nacional</A></P>
-<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=159&amp;username=guest&amp;password=guest" target=_blank>Generadores de Informacion</A></P>
-<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=160&amp;username=guest&amp;password=guest" target=_blank>ONG y Sociedad Civil</A></P>
-<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=161&amp;username=guest&amp;password=guest" target=_blank>Grupos de Industria</A></P>
-<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=162&amp;username=guest&amp;password=guest" target=_blank>Cientificos, Academicos, Organizaciones de Bioseguridad</A></P>
-<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=163&amp;username=guest&amp;password=guest" target=_blank>Aduanas y Controles Fronterizos</A></P>
-<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=164&amp;username=guest&amp;password=guest" target=_blank>Medios de Comunicacion</A></P>
-<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=165&amp;username=guest&amp;password=guest" target=_blank>Publico General</A></P></DIV>
+<P><STRONG>Resume todos los recursos de entrenamientos disponibles y describe la&nbsp; currícula modelo para cada uno de los grupos de beneficiarios.</STRONG></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/Es/02) Stakeholder curricula/CC01Es.pdf" target=_blank>Ingreso de informacion Nacional</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/Es/02) Stakeholder curricula/CC02Es.pdf" target=_blank>Generadores de Informacion</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/Es/02) Stakeholder curricula/CC03Es.pdf" target=_blank>ONG y Sociedad Civil</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/Es/02) Stakeholder curricula/CC04Es.pdf" target=_blank>Grupos de Industria</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/Es/02) Stakeholder curricula/CC05Es.pdf" target=_blank>Cientificos, Academicos, Organizaciones de Bioseguridad</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/Es/02) Stakeholder curricula/CC06Es.pdf" target=_blank>Aduanas y Controles Fronterizos</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/Es/02) Stakeholder curricula/CC07Es.pdf" target=_blank>Medios de Comunicacion</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/Es/02) Stakeholder curricula/CC08Es.pdf" target=_blank>Publico General</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
