--- a/CurrentRelease/es/Using BCH training modules to meet stakeholder needs.html
+++ b/CurrentRelease/es/Using BCH training modules to meet stakeholder needs.html
@@ -70,9 +70,8 @@
     </div>
     <div id="pagebody">
         <div id="mainbody">
-<P></P>
-<DIV>Provee una guía para los instructores que utilizan los Módulos de Entrenamiento para capacitar&nbsp; a una variedad de beneficiarios </DIV>
-<DIV><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=342&amp;username=guest&amp;password=guest" target=_blank>Guias para el uso de materiales</A> </DIV>
+<P><STRONG>Provee una guía para los instructores que utilizan los Módulos de Entrenamiento para capacitar&nbsp; a una variedad de beneficiarios.</STRONG></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/Es/01) Using BCH training modules to meet stakeholder needs/GD01Es.pdf" target=_blank>Guias para el uso de materiales</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
