git-svn-id: https://subversion.cbd.int/svn/repo/Bch/Help@1746 ca237ed5-24d0-bc44-ad4d-3f151b82840b

--- a/CurrentRelease/fr/AJAX_BCH_Development_Tool.html
+++ b/CurrentRelease/fr/AJAX_BCH_Development_Tool.html
@@ -70,11 +70,11 @@
     </div>
     <div id="pagebody">
         <div id="mainbody">
-<DIV>
-<P class=MsoNormal style="MARGIN: 0cm 0cm 0pt"><SPAN lang=EN-CA>Le branchement Ajax du CEPRB est une application JavaScript légère basée sur la technologie Ajax qui peut être aisément intégrée dans tout site web afin de permettre un affichage dynamique de l’information depuis le Portail Central du CEPRB.<BR><BR>L’utilisation du branchement Ajax du CEPRB ne demande pas de connaissances spécifiques en TIC. Le branchement marche sur toutes les plateformes de serveurs et ne demande aucune installation de logiciels. Tous les fichiers nécessaires sont situés sur le Portail Central du CEPRB et sont entretenus par le Secrétariat.<BR><BR>Le branchement Ajax du CEPRB est une application client. La connexion au Portail Central du CEPRB est faite directement par le client (utilisateur final).</SPAN></P>
-<P class=MsoNormal>&nbsp;</P>
-<P class=MsoNormal><IMG class=activityicon alt=Ressource src="images/pdf.gif"> <A title=Ressource href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=596&amp;username=guest&amp;password=guest"' target=_blank>Ajax Manuel</A></P>
-<P class=MsoNormal><IMG class=activityicon alt=Ressource src="images/pdf.gif"> <A title=Ressource href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=597&amp;username=guest&amp;password=guest"' target=_blank>Exercice pratique sur AJAX</A></P></DIV>
+<P><B>Le branchement Ajax du CEPRB est une application JavaScript légère basée sur la technologie Ajax qui peut être aisément intégrée dans tout site web afin de permettre un affichage dynamique de l’information depuis le Portail Central du CEPRB.</B></P>
+<P><B>L’utilisation du branchement Ajax du CEPRB ne demande pas de connaissances spécifiques en TIC. Le branchement marche sur toutes les plateformes de serveurs et ne demande aucune installation de logiciels. Tous les fichiers nécessaires sont situés sur le Portail Central du CEPRB et sont entretenus par le Secrétariat.</B></P>
+<P><B>Le branchement Ajax du CEPRB est une application client. La connexion au Portail Central du CEPRB est faite directement par le client (utilisateur final).</B></P>
+<P class=MsoNormal><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/Fr/13) Ajax BCH Development tool/AX01Fr.pdf" target=_blank>Ajax Manuel.</A></P>
+<P class=MsoNormal><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/Fr/13) Ajax BCH Development tool/AX02Fr.pdf" target=_blank>Exercice pratique sur AJAX</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
