--- a/CurrentRelease/fr/Exercises.html
+++ b/CurrentRelease/fr/Exercises.html
@@ -70,8 +70,8 @@
     </div>
     <div id="pagebody">
         <div id="mainbody">
-<DIV class=summary>Exercices pour l'atelier de formation du CEPRB </DIV>
-<DIV class=summary><IMG class=activityicon alt=Ressource src="images/pdf.gif"> <A title=Ressource href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=579&amp;username=guest&amp;password=guest"' target=_blank>Exercices A-F</A> </DIV>
+<P><STRONG>Exercices pour l'atelier de formation du CEPRB</STRONG></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Fr/11) Exercises/AE01Fr.pdf" target=_blank>Exercices A - F</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
