--- a/CurrentRelease/fr/Promotional_Materials.html
+++ b/CurrentRelease/fr/Promotional_Materials.html
@@ -70,10 +70,9 @@
     </div>
     <div id="pagebody">
         <div id="mainbody">
-<DIV class=summary>
-<P>Contient une affiche d’une page et un dépliant succinct avec le contenu de base qui peuvent être adaptés par le pays qui mène des cours pour intervenants et les utiliser comme matériel promotionnel.</P>
-<P><IMG class=activityicon alt=Ressource src="images/word.gif"> <A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=577&amp;username=guest&amp;password=guest" target=_blank ?>CEPRB Dépliant</A></P>
-<P><IMG class=activityicon alt=Ressource src="images/word.gif"> <A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=578&amp;username=guest&amp;password=guest" target=_blank ?>CEPBR Affiche</A></P></DIV>
+<P><STRONG>Contient une affiche d’une page et un dépliant succinct avec le contenu de base qui peuvent être adaptés par le pays qui mène des cours pour intervenants et les utiliser comme matériel promotionnel.</STRONG></P>
+<P><IMG class=activityicon alt=Resource src="images/word.gif">&nbsp;<A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Fr/10) Promotional Materials/PM01Fr.doc" target=_blank>CEPRB Dépliant</A></P>
+<P><IMG class=activityicon alt=Resource src="images/word.gif">&nbsp;<A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Fr/10) Promotional Materials/PM02Fr.doc" target=_blank>CEPRB Affiche</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
