--- a/CurrentRelease/fr/Quiz_Questions_with_Answer_keys.html
+++ b/CurrentRelease/fr/Quiz_Questions_with_Answer_keys.html
@@ -70,11 +70,10 @@
     </div>
     <div id="pagebody">
         <div id="mainbody">
-<DIV class=summary>
-<DIV dir=ltr>Il y a plusieurs questions tests disponibles qui fournissent une interaction rapide avec les participants et un moyen facile d’évaluer la compréhension des divers usages du CEPRB et pourraient être utilisées au cours de la formation.</DIV>
-<DIV dir=ltr><IMG class=activityicon alt=Ressource src="images/pdf.gif"> <A title=Ressource href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=562&amp;username=guest&amp;password=guest"' target=_blank>Cartes de tests rapides</A> </DIV>
-<DIV dir=ltr><IMG class=activityicon alt=Ressource src="images/pdf.gif"> <A title=Ressource href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=563&amp;username=guest&amp;password=guest"' target=_blank>Cartes de tests rapides avec clé de correction</A> </DIV>
-<DIV dir=ltr><IMG class=activityicon alt=Ressource src="images/pdf.gif"> <A title=Ressource href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=564&amp;username=guest&amp;password=guest"' target=_blank>Chasse au trésor</A> </DIV></DIV>
+<P><STRONG>Il y a plusieurs questions tests disponibles qui fournissent une interaction rapide avec les participants et un moyen facile d’évaluer la compréhension des divers usages du CEPRB et pourraient être utilisées au cours de la formation.</STRONG></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Fr/08) Quiz Questions with Answer Keys/QZ01Fr.pdf" target=_blank>Cartes de tests rapides</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Fr/08) Quiz Questions with Answer Keys/QZ02Fr.pdf" target=_blank>Cartes de tests rapides avec clé de correction</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Fr/08) Quiz Questions with Answer Keys/QZ03Fr.pdf" target=_blank>Chasse au trésor</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
