--- a/CurrentRelease/fr/Using BCH training modules to meet stakeholder needs.html
+++ b/CurrentRelease/fr/Using BCH training modules to meet stakeholder needs.html
@@ -70,9 +70,8 @@
     </div>
     <div id="pagebody">
         <div id="mainbody">
-<DIV class=summary>
-<P>Fournit des directives aux instructeurs du CEPRB pour la formation d'une variété de différents intervenants en utilisant les modules de formation.</P>
-<P><IMG class=activityicon alt=Ressource src="images/pdf.gif"> <A href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=499&amp;username=guest&amp;password=guest"' target=_blank>Guide de l'utilisation des matériaux</A></P></DIV>
+<P><STRONG>Fournit des directives aux instructeurs du CEPRB pour la formation d'une variété de différents intervenants en utilisant les modules de formation.</STRONG></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/Fr/01) Using BCH training modules to meet stakeholder needs/GD01Fr.pdf" target=_blank>Guide de l'utilisation des matériaux</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
