--- a/CurrentRelease/fr/Discussion_Points_with_answer_Key.html
+++ b/CurrentRelease/fr/Discussion_Points_with_answer_Key.html
@@ -70,10 +70,9 @@
     </div>
     <div id="pagebody">
         <div id="mainbody">
-<DIV class=summary>
-<DIV dir=ltr>Il y a plusieurs cartes avec différents scénarios pour la discussion qui peuvent être utilisées tout au long de la formation avec des clés de correction. </DIV>
-<DIV dir=ltr><IMG class=activityicon alt=Ressource src="images/pdf.gif"> <A title=Ressource href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=560&amp;username=guest&amp;password=guest"' target=_blank>Points de discussion</A> </DIV>
-<DIV dir=ltr><IMG class=activityicon alt=Ressource src="images/pdf.gif"> <A title=Ressource href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=561&amp;username=guest&amp;password=guest"' target=_blank>Points de discussion avec clé de correction</A> </DIV></DIV>
+<P><STRONG>Il y a plusieurs cartes avec différents scénarios pour la discussion qui peuvent être utilisées tout au long de la formation avec des clés de correction.</STRONG></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Fr/07) Discussion Points with Answer Keys/DP01Fr.pdf" target=_blank>Points de discussion</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Fr/07) Discussion Points with Answer Keys/DP02Fr.pdf" target=_blank>Points de discussion avec clé de correction</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
