--- a/CurrentRelease/fr/Operational_Handbook.html
+++ b/CurrentRelease/fr/Operational_Handbook.html
@@ -70,12 +70,11 @@
     </div>
     <div id="pagebody">
         <div id="mainbody">
-<DIV class=summary>
-<DIV id=result_box dir=ltr>Le Manuel D’opérations fournit des informations détaillées pour les pays concernant la participation au Projet PNUE-FEM pour une "Participation effective au Centre d’Echanges pour la prévention des risques biotechnologiques"</DIV>
-<DIV dir=ltr><IMG class=activityicon alt=Ressource src="images/pdf.gif"> <A title=Ressource href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=565&amp;username=guest&amp;password=guest"' target=_blank>Manuel D'opérations</A> </DIV>
-<DIV dir=ltr><IMG class=activityicon alt=Ressource src="images/pdf.gif"> <A title=Ressource href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=566&amp;username=guest&amp;password=guest"' target=_blank>Annexe 7</A> </DIV>
-<DIV dir=ltr><IMG class=activityicon alt=Ressource src="images/word.gif"> <A title=Ressource href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=575&amp;username=guest&amp;password=guest"' target=_blank>Formulaire 9 (En Anglais)</A> </DIV>
-<DIV dir=ltr><IMG class=activityicon alt=Ressource src="images/word.gif"> <A title=Ressource href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=576&amp;username=guest&amp;password=guest"' target=_blank>Formulaire 10 (En Anglais)</A> </DIV></DIV>
+<P><STRONG>Le Manuel D’opérations fournit des informations détaillées pour les pays concernant la participation au Projet PNUE-FEM pour une "Participation effective au Centre d’Echanges pour la prévention des risques biotechnologiques"</STRONG></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Fr/09) Operational Handbook/OH01Fr.pdf" target=_blank>Manuel D’opérations</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Fr/09) Operational Handbook/OH02Fr.pdf" target=_blank>Annexe 7</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/word.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Fr/09) Operational Handbook/OH11En.doc" target=_blank>Formulaire 9 (en Anglais)</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/word.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Fr/09) Operational Handbook/OH12En.doc" target=_blank>Formulaire 10 (en Anglais)</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
