--- a/CurrentRelease/fr/Ready_Reference_Guide.html
+++ b/CurrentRelease/fr/Ready_Reference_Guide.html
@@ -70,22 +70,20 @@
     </div>
     <div id="pagebody">
         <div id="mainbody">
-<P><SPAN lang=ES-TRAD>Il y a plusieurs feuillets de référence disponibles qui fournissent des vues d’ensemble rapides des parties du CEPRB fréquemment utilisées et qui pourraient être utilisées comme références au bureau après la fin de la formation.</SPAN></P>
-<P>&nbsp;</P>
-<P><IMG class=activityicon alt=Ressource src="images/pdf.gif"> <A title=Ressource href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=546&amp;username=guest&amp;password=guest"' target=_blank>Brève Initiation au CEPRB</A></P>
-<P><IMG class=activityicon alt=Ressource src="images/pdf.gif"> <A title=Ressource href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=547&amp;username=guest&amp;password=guest"' target=_blank>Acronymes</A></P>
-<P><IMG class=activityicon alt=Ressource src="images/pdf.gif"> <A title=Ressource href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=548&amp;username=guest&amp;password=guest"' target=_blank>Types de registres sur le CEPRB</A></P>
-<P><IMG class=activityicon alt=Ressource src="images/pdf.gif"> <A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=549&amp;username=guest&amp;password=guest" target=_blank>Icônes</A></P>
-<P><IMG class=activityicon alt=Ressource src="images/pdf.gif"> <A title=Ressource href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=550&amp;username=guest&amp;password=guest"' target=_blank>Petit Glossaire</A></P>
-<P><IMG class=activityicon alt=Ressource src="images/pdf.gif"> <A title=Ressource href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=551&amp;username=guest&amp;password=guest"' target=_blank>Centre de Gestion</A></P>
-<P><IMG class=activityicon alt=Ressource src="images/pdf.gif"> <A title=Ressource href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=552&amp;username=guest&amp;password=guest"' target=_blank>Décisions et déclarations</A></P>
-<P><IMG class=activityicon alt=Ressource src="images/pdf.gif"> <A title=Ressource href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=553&amp;username=guest&amp;password=guest"' target=_blank>Caractères Introduits</A></P>
-<P><IMG class=activityicon alt=Ressource src="images/pdf.gif"> <A title=Ressource href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=554&amp;username=guest&amp;password=guest"' target=_blank>Contacts</A></P>
-<P><IMG class=activityicon alt=Ressource src="images/pdf.gif"> <A title=Ressource href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=555&amp;username=guest&amp;password=guest"' target=_blank>Ressources d’information</A></P>
-<P><IMG class=activityicon alt=Ressource src="images/pdf.gif"> <A title=Ressource href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=556&amp;username=guest&amp;password=guest"' target=_blank>Identification unique</A></P>
-<P><IMG class=activityicon alt=Ressource src="images/pdf.gif"> <A title=Ressource href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=557&amp;username=guest&amp;password=guest"' target=_blank>Information à publier sur le CEPRB</A></P>
-<P><IMG class=activityicon alt=Ressource src="images/pdf.gif"> <A title=Ressource href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=558&amp;username=guest&amp;password=guest"' target=_blank>Délais pour publier des informations sur le CEPBR</A></P>
-<P><IMG class=activityicon alt=Ressource src="images/pdf.gif"> <A title=Ressource href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=559&amp;username=guest&amp;password=guest"' target=_blank>Liste de vérification des renseignements à communiquer au CEPRB</A></P>
+<P><STRONG>Il y a plusieurs feuillets de référence disponibles qui fournissent des vues d’ensemble rapides des parties du CEPRB fréquemment utilisées et qui pourraient être utilisées comme références au bureau après la fin de la formation.</STRONG><BR><BR><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Fr/06) Ready Reference Guides/RR01Fr.pdf" target=_blank>Brève Initiation au CEPRB</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Fr/06) Ready Reference Guides/RR02Fr.pdf" target=_blank>Acronymes</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Fr/06) Ready Reference Guides/RR03Fr.pdf" target=_blank>Types de registres sur le CEPRB</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Fr/06) Ready Reference Guides/RR04Fr.pdf" target=_blank>Icônes</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Fr/06) Ready Reference Guides/RR05Fr.pdf" target=_blank>Petit Glossaire</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Fr/06) Ready Reference Guides/RR06Fr.pdf" target=_blank>Centre de Gestion</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Fr/06) Ready Reference Guides/RR07Fr.pdf" target=_blank>Décisions et déclarations</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Fr/06) Ready Reference Guides/RR08Fr.pdf" target=_blank>Caractères Introduits</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Fr/06) Ready Reference Guides/RR09Fr.pdf" target=_blank>Contacts</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Fr/06) Ready Reference Guides/RR10Fr.pdf" target=_blank>Ressources d’information</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Fr/06) Ready Reference Guides/RR11Fr.pdf" target=_blank>Identification unique</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Fr/06) Ready Reference Guides/RR12Fr.pdf" target=_blank>Information à publier sur le CEPRB</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Fr/06) Ready Reference Guides/RR13Fr.pdf" target=_blank>Délais pour publier des informations sur le CEPBR</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Fr/06) Ready Reference Guides/RR14Fr.pdf" target=_blank>Liste de vérification des renseignements à communiquer au CEPRB</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
