--- a/CurrentRelease/fr/Stakeholder curricula.html
+++ b/CurrentRelease/fr/Stakeholder curricula.html
@@ -70,15 +70,15 @@
     </div>
     <div id="pagebody">
         <div id="mainbody">
-<DIV>Résume toutes les ressources de formation disponibles et décrit le programme d'études pour chaque groupe de d'intervenants. </DIV>
-<DIV><IMG class=activityicon alt=Ressource src="images/pdf.gif"> <A title=Ressource href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=500&amp;username=guest&amp;password=guest"' target=_blank>Saisie de Données Nationales</A> </DIV>
-<DIV><IMG class=activityicon alt=Ressource src="images/pdf.gif"> <A title=Ressource href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=501&amp;username=guest&amp;password=guest"' target=_blank>Générateurs d'Informations</A> </DIV>
-<DIV><IMG class=activityicon alt=Ressource src="images/pdf.gif"> <A title=Ressource href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=502&amp;username=guest&amp;password=guest"' target=_blank>ONGs &amp; Société Civile</A> </DIV>
-<DIV><IMG class=activityicon alt=Ressource src="images/pdf.gif"> <A title=Ressource href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=503&amp;username=guest&amp;password=guest"' target=_blank>Groupes Industriels</A> </DIV>
-<DIV><IMG class=activityicon alt=Ressource src="images/pdf.gif"> <A title=Ressource href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=504&amp;username=guest&amp;password=guest"' target=_blank>Scientifiques, Académiciens, Organisations de Biosécurité</A> </DIV>
-<DIV><IMG class=activityicon alt=Ressource src="images/pdf.gif"> <A title=Ressource href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=505&amp;username=guest&amp;password=guest"' target=_blank>Douanes et contrôle de frontières.</A> </DIV>
-<DIV><IMG class=activityicon alt=Ressource src="images/pdf.gif"> <A title=Ressource href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=506&amp;username=guest&amp;password=guest"' target=_blank>Media</A> </DIV>
-<DIV><IMG class=activityicon alt=Ressource src="images/pdf.gif"> <A title=Ressource href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=507&amp;username=guest&amp;password=guest"' target=_blank>Public General</A> </DIV>
+<P><STRONG>Résume toutes les ressources de formation disponibles et décrit le programme d'études pour chaque groupe d'intervenants.</STRONG></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/Fr/02) Stakeholder curricula/CC01Fr.pdf" target=_blank>Saisie de Données Nationales</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/Fr/02) Stakeholder curricula/CC02Fr.pdf" target=_blank>Générateurs d'Informations</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/Fr/02) Stakeholder curricula/CC03Fr.pdf" target=_blank>ONGs &amp; Société Civile</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/Fr/02) Stakeholder curricula/CC04Fr.pdf" target=_blank>Groupes Industriels</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/Fr/02) Stakeholder curricula/CC05Fr.pdf" target=_blank>Scientifiques, Académiciens, Organisations de Biosécurité</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/Fr/02) Stakeholder curricula/CC06Fr.pdf" target=_blank>Douanes et contrôle de frontières.</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/Fr/02) Stakeholder curricula/CC07Fr.pdf" target=_blank>Media</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/Fr/02) Stakeholder curricula/CC08Fr.pdf" target=_blank>Public General</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
