git-svn-id: https://subversion.cbd.int/svn/repo/Bch/Help@1761 ca237ed5-24d0-bc44-ad4d-3f151b82840b

--- a/CurrentRelease/ru/AJAX_BCH_Development_Tool.html
+++ b/CurrentRelease/ru/AJAX_BCH_Development_Tool.html
@@ -70,10 +70,11 @@
     </div>
     <div id="pagebody">
         <div id="mainbody">
-<DIV class=summary>Программный модуль МПБ «Ajax Plug-In» – это простое JavaScript приложение, основанное на технологии Ajax, которое может быть легко интегрировано в любой веб-сайт для отображения в динамическом режиме информации Центрального портала МПБ<BR>Использование программного модуля МПБ «Ajax Plug-In» не требует специфических знаний в области информационных технологий. Он работает на любых серверных платформах и не требует установки дополнительного программного обеспечения. Все необходимые файлы находятся на Центральном портале МПБ и поддерживаются Секретариатом КБР. </DIV>
-<DIV class=summary></DIV>
-<DIV class=summary><IMG class=activityicon alt=Ресурс src="images/pdf.gif"> <A href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=716&amp;username=guest&amp;password=guest"' target=_blank>Руководство пользователя программного модуля Ajax Plug-In</A> </DIV>
-<DIV class=summary><IMG class=activityicon alt=Ресурс src="images/pdf.gif"> <A href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=717&amp;username=guest&amp;password=guest"' target=_blank>Упражнения по использованию программного модуля Ajax Plug-In</A> </DIV>
+<P><B>Программный модуль МПБ «Ajax Plug-In» – это простое JavaScript приложение, основанное на технологии Ajax, которое может быть легко интегрировано в любой веб-сайт для отображения в динамическом режиме информации Центрального портала МПБ.</B></P>
+<P><B>Использование программного модуля МПБ «Ajax Plug-In» не требует специфических знаний в области информационных технологий. Он работает на любых серверных платформах и не требует установки дополнительного программного обеспечения. Все необходимые файлы находятся на Центральном портале МПБ и поддерживаются Секретариатом КБР.</B></P>
+<P><B>Программный модуль МПБ «Ajax Plug-In» является «клиентским» приложением. Соединение с Центральным порталом МПБ осуществляется непосредственно клиентом (непосредственным пользователем).</B></P>
+<P class=MsoNormal><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/Ru/13) Ajax BCH Development tool/AX01Ru.pdf" target=_blank>Руководство пользователя программного модуля Ajax Plug-In.</A></P>
+<P class=MsoNormal><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/Ru/13) Ajax BCH Development tool/AX02Ru.pdf" target=_blank>Упражнения по использованию программного модуля Ajax Plug-In</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
