--- a/CurrentRelease/ru/Interactive_Modules.html
+++ b/CurrentRelease/ru/Interactive_Modules.html
@@ -70,10 +70,9 @@
     </div>
     <div id="pagebody">
         <div id="mainbody">
-<DIV class=summary>Два интерактивных модуля в качестве практического средства для помощи в понимании вопросов, рассматриваемых в учебных модулях 1 и 2. Модули разработаны в среде Macromedia Flash. Вы можете загрузить и установить эти интерактивные модули. </DIV>
-<DIV class=summary></DIV>
-<DIV class=summary><IMG class=activityicon alt=Ресурс src="images/web.gif"> <A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=637&amp;username=guest&amp;password=guest" target=_blank ?>Введение в Картахенский протокол по биобезопасности (на английском языке)</A> </DIV>
-<DIV class=summary><IMG class=activityicon alt=Ресурс src="images/web.gif"> <A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=638&amp;username=guest&amp;password=guest" target=_blank ?>Введение в Механизм посредничества по биобезопасности (на английском языке)</A> </DIV>
+<P><STRONG>Два интерактивных модуля в качестве практического средства для помощи в понимании вопросов, рассматриваемых в учебных модулях 1 и 2. Модули разработаны в среде Macromedia Flash. Вы можете загрузить и установить эти интерактивные модули.</STRONG></P>
+<P><IMG alt="" src="images/web.gif" border=0>&nbsp;<A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Ru/04) Interactive Modules/IM01En.exe" target=_blank>Введение в Картахенский протокол по биобезопасности</A></P>
+<P><IMG alt="" src="images/web.gif" border=0>&nbsp;<A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Ru/04) Interactive Modules/IM02En.exe" target=_blank>Введение в Механизм посредничества по биобезопасности</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
