--- a/CurrentRelease/ru/Promotional_Materials.html
+++ b/CurrentRelease/ru/Promotional_Materials.html
@@ -70,10 +70,9 @@
     </div>
     <div id="pagebody">
         <div id="mainbody">
-<DIV class=summary>Данный раздел содержит наглядные пособия, содержащие основные понятия о МПБ, в виде плаката и краткой брошюры, которые можно изменять в соответствии с требованиями обучения непосредственной группы обучаемых лиц конкретной страны. </DIV>
-<DIV class=summary></DIV>
-<DIV class=summary><IMG class=activityicon alt=Ресурс src="images/word.gif"> <A title=Ресурс href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=697&amp;username=guest&amp;password=guest"' target=_blank>Брошюра по МПБ (на английском языке)</A> </DIV>
-<DIV class=summary><IMG class=activityicon alt=Ресурс src="images/word.gif"> <A title=Ресурс href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=698&amp;username=guest&amp;password=guest"' target=_blank>Плакат по МПБ (на английском языке)</A> </DIV>
+<P><STRONG>Данный раздел содержит наглядные пособия, содержащие основные понятия о МПБ, в виде плаката и краткой брошюры, которые можно изменять в соответствии с требованиями обучения непосредственной группы обучаемых лиц конкретной страны.</STRONG></P>
+<P><IMG class=activityicon alt=Resource src="images/word.gif">&nbsp;<A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Ru/10) Promotional Materials/PM01En.doc" target=_blank>Брошюра по МПБ (на английском языке)</A></P>
+<P><IMG class=activityicon alt=Resource src="images/word.gif">&nbsp;<A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Ru/10) Promotional Materials/PM02En.doc" target=_blank>Плакат по МПБ (на английском языке)</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
