--- a/CurrentRelease/ru/Quiz_Questions_with_Answer_keys.html
+++ b/CurrentRelease/ru/Quiz_Questions_with_Answer_keys.html
@@ -70,11 +70,10 @@
     </div>
     <div id="pagebody">
         <div id="mainbody">
-<DIV class=summary>Ряд вопросов для викторины, которая может быть проведена во время обучения для обеспечения взаимодействия с участниками и оценки понимания ими различных аспектов МПБ </DIV>
-<DIV class=summary></DIV>
-<DIV class=summary><IMG class=activityicon alt=Ресурс src="images/pdf.gif"> <A title=Ресурс href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=682&amp;username=guest&amp;password=guest"' target=_blank>Карточки викторины</A> </DIV>
-<DIV class=summary><IMG class=activityicon alt=Ресурс src="images/pdf.gif"> <A title=Ресурс href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=683&amp;username=guest&amp;password=guest"' target=_blank>Вопросы викторины с ответами</A>&nbsp; </DIV>
-<DIV class=summary><IMG class=activityicon alt=Ресурс src="images/pdf.gif"> <A title=Ресурс href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=684&amp;username=guest&amp;password=guest"' target=_blank>Игра «Поиск сокровищ»</A> </DIV>
+<P><STRONG>Ряд вопросов для викторины, которая может быть проведена во время обучения для обеспечения взаимодействия с участниками и оценки понимания ими различных аспектов МПБ</STRONG></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Ru/08) Quiz Questions with Answer Keys/QZ01Ru.pdf" target=_blank>Карточки викторины</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Ru/08) Quiz Questions with Answer Keys/QZ02Ru.pdf" target=_blank>Вопросы викторины с ответами</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Ru/08) Quiz Questions with Answer Keys/QZ03Ru.pdf" target=_blank>Игра «Поиск сокровищ»</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
