--- a/CurrentRelease/ru/Training_Modules.html
+++ b/CurrentRelease/ru/Training_Modules.html
@@ -70,16 +70,16 @@
     </div>
     <div id="pagebody">
         <div id="mainbody">
-<DIV class=summary>Учебные модули в формате PDF, которые содержат различную информацию от вводных материалов до детальных обзоров<BR>Большинство модулей содержат интерактивные упражнения и детальные пошаговые руководства выполнения тех или иных действий. </DIV>
-<DIV class=summary><IMG class=activityicon alt=Ресурс src="images/pdf.gif"> <A href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=628&amp;username=guest&amp;password=guest"' target=_blank>Введение в Картахенский протокол по биобезопасности</A> </DIV>
-<DIV class=summary><IMG class=activityicon alt=Ресурс src="images/pdf.gif"> <A href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=629&amp;username=guest&amp;password=guest"' target=_blank>Введение в Механизм посредничества по биобезопасности</A> </DIV>
-<DIV class=summary><IMG class=activityicon alt=Ресурс src="images/pdf.gif"> <A href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=630&amp;username=guest&amp;password=guest"' target=_blank>Знакомство с Центральным порталом МПБ</A> </DIV>
-<DIV class=summary><IMG class=activityicon alt=Ресурс src="images/pdf.gif"> <A href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=631&amp;username=guest&amp;password=guest"' target=_blank>Поиск информации на Центральном портале МПБ</A> </DIV>
-<DIV class=summary><IMG class=activityicon alt=Ресурс src="images/pdf.gif"> <A href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=632&amp;username=guest&amp;password=guest"' target=_blank>Рекомендации для стран(на английском языке)</A> </DIV>
-<DIV class=summary><IMG class=activityicon alt=Ресурс src="images/pdf.gif"> <A href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=633&amp;username=guest&amp;password=guest"' target=_blank>Использование центра управления(на английском языке)</A> </DIV>
-<DIV class=summary><IMG class=activityicon alt=Ресурс src="images/pdf.gif"> <A href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=634&amp;username=guest&amp;password=guest"' target=_blank>Предоставление национальных сведений(на английском языке)</A> </DIV>
-<DIV class=summary><IMG class=activityicon alt=Ресурс src="images/pdf.gif"> <A href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=635&amp;username=guest&amp;password=guest"' target=_blank>Ввод информативных сведений(на английском языке)</A> </DIV>
-<DIV class=summary><IMG class=activityicon alt=Ресурс src="images/pdf.gif"> <A href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=636&amp;username=guest&amp;password=guest"' target=_blank>Становление Стороной Картахенского протокола</A> </DIV>
+<P><STRONG>Учебные модули в формате PDF, которые содержат различную информацию от вводных материалов до детальных обзоров. Большинство модулей содержат интерактивные упражнения и детальные пошаговые руководства выполнения тех или иных действий.</STRONG></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Ru/03) Training Modules/MO01Ru.pdf" target=_blank>Введение в Картахенский протокол по биобезопасности</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Ru/03) Training Modules/MO02Ru.pdf" target=_blank>Введение в Механизм посредничества по биобезопасности</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Ru/03) Training Modules/MO03Ru.pdf" target=_blank>Знакомство с Центральным порталом МПБ</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Ru/03) Training Modules/MO04Ru.pdf" target=_blank>Поиск информации на Центральном портале МПБ</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Ru/03) Training Modules/MO05En.pdf" target=_blank>Рекомендации для стран (на английском языке)</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Ru/03) Training Modules/MO06En.pdf" target=_blank>Использование центра управления (на английском языке)</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Ru/03) Training Modules/MO07En.pdf" target=_blank>Предоставление национальных сведений (на английском языке)</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Ru/03) Training Modules/MO08En.pdf" target=_blank>Ввод информативных сведений (на английском языке)</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Ru/03) Training Modules/MO10Ru.pdf" target=_blank>Становление Стороной Картахенского протокола</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
