--- a/CurrentRelease/ru/Discussion_Points_with_answer_Key.html
+++ b/CurrentRelease/ru/Discussion_Points_with_answer_Key.html
@@ -70,10 +70,9 @@
     </div>
     <div id="pagebody">
         <div id="mainbody">
-<DIV class=summary>Ряд карточек с различными темами для обсуждения во время проведения обучения и ответы к ним. </DIV>
-<DIV class=summary></DIV>
-<DIV class=summary><IMG class=activityicon alt=Ресурс src="images/pdf.gif"> <A title=Ресурс href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=680&amp;username=guest&amp;password=guest"' target=_blank>Темы для обсуждения</A> </DIV>
-<DIV class=summary><IMG class=activityicon alt=Ресурс src="images/pdf.gif"> <A title=Ресурс href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=681&amp;username=guest&amp;password=guest"' target=_blank>Темы для обсуждения и ответы к ним</A> </DIV>
+<P><STRONG>Ряд карточек с различными темами для обсуждения во время проведения обучения и ответы к ним</STRONG></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Ru/07) Discussion Points with Answer Keys/DP01Ru.pdf" target=_blank>Темы для обсуждения</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Ru/07) Discussion Points with Answer Keys/DP02Ru.pdf" target=_blank>Темы для обсуждения и ответы к ним</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
