--- a/CurrentRelease/ru/Exercises.html
+++ b/CurrentRelease/ru/Exercises.html
@@ -70,8 +70,8 @@
     </div>
     <div id="pagebody">
         <div id="mainbody">
-<DIV class=summary>Упражнения для проведения семинаров по МПБ </DIV>
-<DIV class=summary><IMG class=activityicon alt=Ресурс src="images/pdf.gif"> <A title=Ресурс href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=699&amp;username=guest&amp;password=guest"' target=_blank>Упражнения A-F</A> </DIV>
+<P><STRONG>Упражнения для проведения семинаров по МПБ</STRONG></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Ru/11) Exercises/AE01Ru.pdf" target=_blank>Упражнения A-F</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
