--- a/CurrentRelease/ru/Operational_Handbook.html
+++ b/CurrentRelease/ru/Operational_Handbook.html
@@ -70,12 +70,11 @@
     </div>
     <div id="pagebody">
         <div id="mainbody">
-<DIV class=summary>Оперативное руководство предоставляет подробную информацию для стран об участии в проекте ЮНЕП-ГЭФ «Эффективное участие в Механизме посредничество по биобезопасности (МПБ)» </DIV>
-<DIV class=summary></DIV>
-<DIV class=summary><IMG class=activityicon alt=Ресурс src="images/pdf.gif"> <A title=Ресурс href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=685&amp;username=guest&amp;password=guest"' target=_blank>Оперативное руководство</A> </DIV>
-<DIV class=summary><IMG class=activityicon alt=Ресурс src="images/pdf.gif"> <A title=Ресурс href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=686&amp;username=guest&amp;password=guest"' target=_blank>Приложение 7</A> </DIV>
-<DIV class=summary><IMG class=activityicon alt=Ресурс src="images/word.gif"> <A title=Ресурс href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=695&amp;username=guest&amp;password=guest"' target=_blank>Форма 9 (на английском языке)</A> </DIV>
-<DIV class=summary><IMG class=activityicon alt=Ресурс src="images/word.gif"> <A title=Ресурс href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=696&amp;username=guest&amp;password=guest"' target=_blank>Форма 10 (на английском языке)</A> </DIV>
+<P><STRONG>Оперативное руководство предоставляет подробную информацию для стран об участии в проекте ЮНЕП-ГЭФ «Эффективное участие в Механизме посредничество по биобезопасности (МПБ)»</STRONG></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Ru/09) Operational Handbook/OH01Ru.pdf" target=_blank>Оперативное руководство</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Ru/09) Operational Handbook/OH02Ru.pdf" target=_blank>Приложение 7</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/word.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Ru/09) Operational Handbook/OH11En.doc" target=_blank>Форма 9 (на английском языке)</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/word.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Ru/09) Operational Handbook/OH12En.doc" target=_blank>Форма 10 (на английском языке)</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
