--- a/CurrentRelease/ru/Ready_Reference_Guide.html
+++ b/CurrentRelease/ru/Ready_Reference_Guide.html
@@ -70,21 +70,20 @@
     </div>
     <div id="pagebody">
         <div id="mainbody">
-<P>Ряд справочных материалов, содержащих краткую информацию по основным темам МПБ, которые могут быть использованы как настольные руководства по завершению обучения.</P>
-<P><IMG class=activityicon alt=Ресурс src="images/pdf.gif"> <A title=Ресурс href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=666&amp;username=guest&amp;password=guest"' target=_blank>Быстрое начало работы с МПБ</A></P>
-<P><IMG class=activityicon alt=Ресурс src="images/pdf.gif"> <A title=Ресурс href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=667&amp;username=guest&amp;password=guest"' target=_blank>Сокращения</A></P>
-<P><IMG class=activityicon alt=Ресурс src="images/pdf.gif"> <A title=Ресурс href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=668&amp;username=guest&amp;password=guest"' target=_blank>Типы сведений МПБ</A></P>
-<P><IMG class=activityicon alt=Ресурс src="images/pdf.gif"> <A title=Ресурс href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=669&amp;username=guest&amp;password=guest"' target=_blank>Пиктограммы</A></P>
-<P><IMG class=activityicon alt=Ресурс src="images/pdf.gif"> <A title=Ресурс href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=670&amp;username=guest&amp;password=guest"' target=_blank>Краткий словарь</A></P>
-<P><IMG class=activityicon alt=Ресурс src="images/pdf.gif"> <A title=Ресурс href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=671&amp;username=guest&amp;password=guest"' target=_blank>Центр управления</A></P>
-<P><IMG class=activityicon alt=Ресурс src="images/pdf.gif"> <A title=Ресурс href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=672&amp;username=guest&amp;password=guest"' target=_blank>Решения и заявления</A></P>
-<P><IMG class=activityicon alt=Ресурс src="images/pdf.gif"> <A href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=673&amp;username=guest&amp;password=guest"' target=_blank>Встроенные или модифицированные признаки</A></P>
-<P><IMG class=activityicon alt=Ресурс src="images/pdf.gif"> <A title=Ресурс href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=674&amp;username=guest&amp;password=guest"' target=_blank>Контактные данные</A></P>
-<P><IMG class=activityicon alt=Ресурс src="images/pdf.gif"> <A title=Ресурс href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=675&amp;username=guest&amp;password=guest"' target=_blank>Информационные ресурсы</A></P>
-<P><IMG class=activityicon alt=Ресурс src="images/pdf.gif"> <A title=Ресурс href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=676&amp;username=guest&amp;password=guest"' target=_blank>Уникальная идентификация</A></P>
-<P><IMG class=activityicon alt=Ресурс src="images/pdf.gif"> <A href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=677&amp;username=guest&amp;password=guest"' target=_blank>Контрольный список сведений обязательных для предоставления МПБ</A></P>
-<P><IMG class=activityicon alt=Ресурс src="images/pdf.gif"> <A title=Ресурс href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=678&amp;username=guest&amp;password=guest"' target=_blank>Сроки предоставления сведений МПБ</A></P>
-<P><IMG class=activityicon alt=Ресурс src="images/pdf.gif"> <A href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=679&amp;username=guest&amp;password=guest"' target=_blank>Контрольный список действий при становлении Стороной Протокола</A></P>
+<P><STRONG>Ряд справочных материалов, содержащих краткую информацию по основным темам МПБ, которые могут быть использованы как настольные руководства по завершению обучения.</STRONG><BR><BR><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Ru/06) Ready Reference Guides/RR01Ru.pdf" target=_blank>Быстрое начало работы с МПБ</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Ru/06) Ready Reference Guides/RR02Ru.pdf" target=_blank>Сокращения</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Ru/06) Ready Reference Guides/RR03Ru.pdf" target=_blank>Типы сведений МПБ</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Ru/06) Ready Reference Guides/RR04Ru.pdf" target=_blank>Пиктограммы</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Ru/06) Ready Reference Guides/RR05Ru.pdf" target=_blank>Краткий словарь</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Ru/06) Ready Reference Guides/RR06Ru.pdf" target=_blank>Центр управления</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Ru/06) Ready Reference Guides/RR07Ru.pdf" target=_blank>Решения и заявления</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Ru/06) Ready Reference Guides/RR08Ru.pdf" target=_blank>Встроенные или модифицированные признаки</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Ru/06) Ready Reference Guides/RR09Ru.pdf" target=_blank>Контактные данные</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Ru/06) Ready Reference Guides/RR10Ru.pdf" target=_blank>Информационные ресурсы</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Ru/06) Ready Reference Guides/RR11Ru.pdf" target=_blank>Уникальная идентификация</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Ru/06) Ready Reference Guides/RR12Ru.pdf" target=_blank>Контрольный список сведений обязательных для предоставления МПБ</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Ru/06) Ready Reference Guides/RR13Ru.pdf" target=_blank>Сроки предоставления сведений МПБ</A></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A title=Recurso href="http://bch.cbd.int/help/trainingmaterials/Ru/06) Ready Reference Guides/RR14Ru.pdf" target=_blank>Контрольный список действий при становлении Стороной Протокола</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
